--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
+blinker==1.4
 Flask==0.10.1
+Flask-Login==0.3.2
+Flask-Mandrill==0.2
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
+MySQL-python==1.2.5
+requests==2.8.1
 Werkzeug==0.10.4
 wheel==0.24.0
